# cipher_ffi

./: README.md
cipher_ffi_flutter/: README.md  pubspec.yaml
cipher_ffi_flutter/android/: build.gradle  settings.gradle
cipher_ffi_flutter/android/src/main/: AndroidManifest.xml
cipher_ffi_flutter/example/: README.md  pubspec.yaml
cipher_ffi_flutter/example/android/: gradle.properties
cipher_ffi_flutter/example/android/app/: build.gradle
cipher_ffi_flutter/example/android/app/src/main/: AndroidManifest.xml
cipher_ffi_flutter/example/android/app/src/main/kotlin/com/example/cipher_ffi_flutter_example/: MainActivity.kt
cipher_ffi_flutter/example/android/app/src/profile/: AndroidManifest.xml
cipher_ffi_flutter/example/lib/: main.dart
cipher_ffi_flutter/example/linux/: CMakeLists.txt  my_application.cc
cipher_ffi_flutter/example/linux/flutter/: generated_plugins.cmake
cipher_ffi_flutter/example/test/: cc_test.dart
cipher_ffi_flutter/example/windows/: CMakeLists.txt
cipher_ffi_flutter/example/windows/flutter/: generated_plugins.cmake
cipher_ffi_flutter/example/windows/runner/: Runner.rc  main.cpp
cipher_ffi_flutter/lib/: cipher_ffi_flutter.dart
cipher_ffi_flutter/lib/src/internal_bindings/: bridge_generated.dart
cipher_ffi_flutter/linux/: CMakeLists.txt
cipher_ffi_flutter/windows/: CMakeLists.txt
cipher_ffi_lib/: Cargo.toml  build.rs  build.sh
cipher_ffi_lib/src/: aes128_imp.rs  aes256_imp.rs  api.rs  bridge_generated.rs  data.rs  lib.rs  rsa_imp.rs
