[package]
name = "cipher_ffi_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cipher_ffi_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
flutter_rust_bridge = "1.41.1"
rsa = "0.6.1"
rand = "0.8.5"
once_cell = "1.13.1"
aes = "0.8.1"
block-padding = "0.3.2"

[build-dependencies]
flutter_rust_bridge_codegen = "1.41.1"
